position fixed on navbar links to prevent horizontal scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,7 @@ body {
     }
 
     .nav-links {
-        position: absolute;
+        position: fixed;
         right: 0px;
         height: 92vh;
         top: 8vh;
